# AgentPipe

./: .gitignore  CONTRIBUTING.md  Cargo.toml  EMOJI.md  Goose.sc  README.md  SECURITY.md  agentpipe-goose.opam  banana_pudding.py  build_town.py  contributors.html  create_pr.py  debt.yaml  dune-project  employees.yaml  fix.py  generate_bloat.py  goose.go  index.html  main.py  package.json  patch.py  pyproject.toml  shanaboo_solution.md
bounty/: golden-eggs-implementation-guide.md  zero-latency-consensus-architecture.md
contracts/: CanineKubernetes.sol
contributors/: index.html
docs/: ACCESSIBILITY_AUDIT.md  banana4d.js  banana8d.js  butter.html  butter.js  company-town.css  company-town.html  company-town.js  contributors.html  contributors.js  doohickey-interface.md  index.html  mascot-pattern-generator.md  shop.html  shop.js  styles.css  vogon_poetry.md
emoji/: AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EMOJI.md  LICENSE  MISSION-STATEMENT.md  README-.md  README.md  SECURITY.md
infra/: README.md  main.tf  outputs.tf  town.tfvars.example  variables.tf
ocaml/: dune  golden_egg.ml  golden_egg.mli  goose.ml  goose.mli  representation.ml  representation.mli  unsafe_demo.ml  value.ml  value.mli
patches/: fix_issue_153.py  fix_issue_154.py  fix_issue_155.py  fix_issue_156.py  fix_issue_157.py
scripts/: agentpipe_mascot.pl  check-8d-site.mjs  check-mascot-pattern.mjs  check-site.mjs  check-website.mjs  email-sendgrid.meta.toml  email-sendgrid.py  generate_mascot_pattern.pl  mascot-pattern.pl  mascot_pattern.pl  test_mascot_pattern.py
(+182 files in other folders)
